# inteligencia-artificial

./: CMakeLists.txt  README.MD  funcoes.cpp  funcoes.h  index.html  main.cpp  teste.html
public/css/: style.css
public/js/: script.js
